# jxl_decode

./: LICENCE  LICENCE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pr_checks.yml  release.yml
src/: jxl-strip.py
src/jxl_decode/: __init__.py  __main__.py  common.py  core.py  decode_jpg.py  decode_jxl.py  decode_ppm.py  encode_png.py  jpg.py  jxl.py  main.py  ppm.py
src/pyjxl/: __init__.py  __main__.py  common.py  decode_jpg.py  decode_jxl.py  decode_ppm.py  encode_png.py  pyjxl.py
tests/: test_cli.py
tests/test_images/: 10x10.jxl  727x7.jxl  gradient_8x8.jxl  gradient_8x8.ppm  jxl.jxl  white_8x8.ppm
