[project]
name = "jxl_decode"
version = "0.0.2"
authors = [
  { name="James Frost", email="git@frost.cx" },
]
description = "A pure python JPEG XL decoder."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["JPEG XL", "jxl"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Multimedia :: Graphics"
]
# dependencies = []
# optional-dependencies = []

[project.urls]
Homepage = "https://github.com/Fraetor/jxl_decode"
"Bug Tracker" = "https://github.com/Fraetor/jxl_decode/issues"

[project.scripts]
jxl_decode = "jxl_decode.core:cli_entrypoint"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tools.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "too-few-public-methods",
  "logging-fstring-interpolation"
]
